--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-# TradePal
-TradePal is a lightweight mobile-web marketplace where students can offer help, request services, or trade goods with each other. The platform uses a simple barter system—no payments, just peer-to-peer exchanges like rides for laundry help or tutoring for groceries.
+# Clutch
+Clutch is a lightweight mobile-web marketplace where students can offer help, request services, or trade goods with each other. The platform uses a simple barter system—no payments, just peer-to-peer exchanges like rides for laundry help or tutoring for groceries.
